# Portfolio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  file_list.txt  implementation_plan.md  package-lock.json  package.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ai-tests.yml  ci.yml  deploy.yml  pr.yml  security-scan.yml
apps/ai/: .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/ai/app/: config.py  database.py  main.py
apps/ai/app/middleware/: auth_middleware.py  input_sanitizer.py  pii_filter.py  rate_limit.py
apps/ai/app/routes/: agent.py  analyze.py  chat.py  health.py  suggest.py
apps/ai/app/services/: agent_service.py  ai_service.py  analytics_service.py  cache_service.py  conversation_manager.py  cost_controller.py  embedding_service.py  ingestion_service.py  model_router.py  rag_service.py
apps/ai/tests/: conftest.py  test_analyze.py  test_chat.py  test_health.py  test_middleware.py  test_suggest.py
apps/api/: .eslintrc.json  Dockerfile  README.md  jest.config.ts  package.json  prisma.config.ts  tsconfig.json
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  lighthouserc.js  next.config.js  (+8 more)
config/: .env.example
docs/: DEDUP-PLAN.md  MASTER-INDEX.md  glossary.md  postman-collection.json
scripts/: generate-postman.mjs  validate-mermaid.js
supabase/: config.toml  seed.sql
(+1088 files in other folders)
